# issue-classification-microservice

./: .gitignore  README.md
microservice/: .dockerignore  .flake8  Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  pyrightconfig.json
microservice/.devcontainer/: devcontainer.json  docker-compose.yml
microservice/docs/microservice/: index.html
microservice/entrypoints/: celery_classifier.sh  celery_vectoriser.sh  main.sh
microservice/envs/: .dev.env  .prod.env
microservice/issues/: delete_duplicates.html  manual_document_cleaning.py  test_producer.py
microservice/issues/todo-add/: api.json  bug.json  cli_cli_bug.json  cli_cli_documentation.json  cli_cli_enhancement.json  denoland_deno_bug.json  denoland_deno_documentation.json  doku.json  doku_toadd.json  gatsbyjs_gatsby_enhancement.json  keras-team_keras_documentation.json  keras-team_keras_enhancement.json  moby_moby_api.json  moby_moby_documentation.json  moby_moby_enhancement.json  mui-org_material-ui_documentation.json  mui-org_material-ui_enhancement.json  pytorch_pytorch_api.json  pytorch_pytorch_documentation.json  pytorch_pytorch_enhancement.json  rails_rails_documentation.json  vercel_next.js_documentation.json
microservice/microservice/: __init__.py  main.py
microservice/microservice/classifier_celery/: __init__.py  celery.py  helper_functions.py  task_classes.py  tasks.py
microservice/microservice/config/: __init__.py  celery_config.py  classifier_config.py  load_classifier.py  load_config.json
microservice/tests/: test_consumer.py  test_producer.py
(+136 files in other folders)
