[tool.poetry]
name = "issue-classification-microservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages =[
    { include = "microservice" },
    { include = "microservice/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
joblib = "^0.17.0"
numpy = "^1.19.2"
pika = "^1.1.0"
celery = "^5.0.0"
redis = "^3.5.3"
flower = "^0.9.5"
scikit-learn = "^0.23.2"
debugpy = "^1.1.0"
pydantic = "^1.7.2"
ujson = "^4.0.1"
pdoc3 = "^0.9.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pydocstyle = "^5.1.1"
flake8 = "^3.8.4"
black = "^20.8b1"
autoflake = "^1.4"
flake8-markdown = "^0.2.0"
pylint = "^2.6.0"
flake8-absolute-import = "^1.0"
pika-stubs = "^0.1.3"
data-science-types = "^0.2.19"
rope = "^0.18.0"

[tool.black]
exclude = "^typings/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
